--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -11,5 +11,13 @@
         <p>Mmm this mean mofo is delicious af, whether you're a stay at home mom,
             or a normal mom, you will go nuts for this pine nut dressed pasta</p>
         </p>
+        <ul>
+            <li>A lot of pasta</li>
+            <li>A lot of brocolli</li>
+            <li>1 Diced red onion</li>
+            <li>Olive oil</li>
+            <li>Chopped garlic cloves</li>
+            <li>Tablespoon of tomato paste</li>
+        </ul>
     </body>
 </html>
