--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 
     <body>
         <h1>Recipes</h1>
-        <a href="./recipes/pasta.html">Tasty pasta</a>
+        <ul>
+            <li><a href="./recipes/pasta.html">Tasty pasta</a></li>
+            <li><a href="./recipes/lasagna.html">My stinky lasagna</a></li>
+        </ul>
+        <h2>Miscellaneous</h2>
+        <ul>
+            <li><a href="./recipes/funny.html">Surprise</a></li>
+        </ul>
         
     </body>
 </html>
