Add CSS and design

--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>websitename</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
     <body>
         <h1>Pasta avec broccoli</h1>
         <img src="https://images.food52.com/rgbKZHj_n3WZW4H_whwI6moelaU=/660x440/filters:format(webp)/b07c909a-ea22-4fee-adfa-479e9640e7c2--2014-0318_genius_broccoli-pasta-026.jpg">
-        <p>Mmm this mean mofo is delicious af, whether you're a stay at home mom,
+        <p class="description">Mhmm this mean mofo is delicious af, whether you're a stay at home mom,
             or a normal mom, you will go nuts for this pine nut dressed pasta</p>
         </p>
         <ul>
@@ -19,5 +20,7 @@
             <li>Chopped garlic cloves</li>
             <li>Tablespoon of tomato paste</li>
         </ul>
+        <p>Awrite, first fing your gonwannado is boil your broclee/</p>
+        <p></p>
     </body>
 </html>
