--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        
         <meta charset="UTF-8">
         <title>WEBSITENAME</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
-        <h1>Recipes</h1>
-        <ul>
-            <li><a href="./recipes/pasta.html">Tasty pasta</a></li>
-            <li><a href="./recipes/lasagna.html">My stinky lasagna</a></li>
-        </ul>
-        <h2>Miscellaneous</h2>
-        <ul>
-            <li><a href="./recipes/funny.html">Surprise</a></li>
-        </ul>
-        
+        <div>
+            <h3>Welcome to my beautiful restaurant</h3>
+            <img id = "mainimg" src="/images/seinfeld.jpg">
+        </div>
+        <div>
+            <h1 class="mytitle">Recipes</h1>
+            <ul>
+                <li><a href="./recipes/pasta.html">Tasty pasta</a></li>
+                <li><a href="./recipes/lasagna.html">My stinky lasagna</a></li>
+            </ul>
+            <h2>Miscellaneous</h2>
+            <ul>
+                <li><a href="./recipes/funny.html">Surprise</a></li>
+            </ul>
+        </div>
     </body>
 </html>
