Add border colors

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        
         <meta charset="UTF-8">
         <title>WEBSITENAME</title>
         <link rel="stylesheet" href="styles.css">
@@ -21,6 +20,7 @@
             <h2>Miscellaneous</h2>
             <ul>
                 <li><a href="./recipes/funny.html">Surprise</a></li>
+                <li><a href="./recipes/dev.html">Dev stuff</a></li>
             </ul>
         </div>
     </body>
