--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -7,9 +7,11 @@
 </head>
 
     <body>
-        <h1>Pasta avec broccoli</h1>
-        <img src="https://images.food52.com/rgbKZHj_n3WZW4H_whwI6moelaU=/660x440/filters:format(webp)/b07c909a-ea22-4fee-adfa-479e9640e7c2--2014-0318_genius_broccoli-pasta-026.jpg">
-        <p class="description">Mhmm this mean mofo is delicious af, whether you're a stay at home mom,
+        <h1 class="mytitle">Pasta avec broccoli</h1>
+        <div class="main-img">
+            <img src="https://images.food52.com/rgbKZHj_n3WZW4H_whwI6moelaU=/660x440/filters:format(webp)/b07c909a-ea22-4fee-adfa-479e9640e7c2--2014-0318_genius_broccoli-pasta-026.jpg">
+        </div>
+            <p class="description">Mhmm this mean mofo is delicious af, whether you're a stay at home mom,
             or a normal mom, you will go nuts for this pine nut dressed pasta</p>
         </p>
         <ul>
