Fix mainimg and develop css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>WEBSITENAME</title>
+        <title>Whacky Web Journey</title>
         <link rel="stylesheet" href="styles.css">
     </head>
 
@@ -12,7 +12,7 @@
             <img id = "mainimg" src="/images/seinfeld.jpg">
         </div>
         <div>
-            <h1 class="mytitle">Recipes</h1>
+            <h1 class="mytitle"><strong>Recipes</strong></h1>
             <ul>
                 <li><a href="./recipes/pasta.html">Tasty pasta</a></li>
                 <li><a href="./recipes/lasagna.html">My stinky lasagna</a></li>
