--- a/recipes/dev.html
+++ b/recipes/dev.html
@@ -2,15 +2,18 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>WEBSITENAME</title>
+        <title>Whacky Web Journey</title>
         <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
         <div class="top-header">
             <div class="button">
-                <h4>
-                    <a href="">Option 1</a>
+                <h4 class ="header">
+                    <a href="../index.html">Home Page</a>
+                    <a href="">Products</a>
+                    <a href="../mainpages/about.html">About</a>
+                    <a href="">Blog</a>
                 </h4>
             </div>
         </div>
