--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>websitename</title>
+    <title>Whacky Web Journey</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
 
@@ -23,6 +23,5 @@
             <li>Tablespoon of tomato paste</li>
         </ul>
         <p>Awrite, first fing your gonwannado is boil your broclee/</p>
-        <p></p>
     </body>
 </html>
