Fix main image not appearing on home page

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <body>
         <div>
             <h3>Welcome to my beautiful restaurant</h3>
-            <img id = "mainimg" src="/images/seinfeld.jpg">
+            <img id = "mainimg" src="./images/seinfeld.jpg">
         </div>
         <div>
             <h1 class="mytitle"><strong>Recipes</strong></h1>
-            <ul>
+            <ul class="list">
                 <li><a href="./recipes/pasta.html">Tasty pasta</a></li>
                 <li><a href="./recipes/lasagna.html">My stinky lasagna</a></li>
             </ul>
