--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     </head>
 
     <body>
-        <div>
+        <div id = "maindiv">
             <h3>Welcome to my beautiful restaurant</h3>
-            <img id = "mainimg" src="./images/seinfeld.jpg">
+            <img src="./images/seinfeld.jpg">
         </div>
-        <div>
+        <div id = "seconddiv">
             <h1 class="mytitle"><strong>Recipes</strong></h1>
             <ul class="list">
                 <li><a href="./recipes/pasta.html">Tasty pasta</a></li>
